--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
                 <h1 class="primary__title">All Products</h1>
               </div>
             </div>
+            //tranding products
             <div class="section__titles">
               <div class="section__title filter-btn" data-id="Trending Products">
                 <span class="dot"></span>
