adding some design

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
 
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
   <!-- Carousel -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css
 ">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="styles.css" />
 
@@ -38,7 +44,7 @@
 
           <div class="nav__logo">
             <a href="/" class="scroll-link">
-              <img src="https://pranixa.com/public/app/4246/logo/logo1.png" style="width:100px; margin-top:5px"/>
+              <img src="https://pranixa.com/public/app/4246/logo/logo1.png" style="width:100px; margin-top:5px" />
             </a>
           </div>
 
@@ -98,17 +104,17 @@
           <ul class="glide__slides">
             <li class="glide__slide">
               <div class="hero__center">
-                <img src="https://pranixa.com/public/app/4246/Main Banner/banner kids.jpg"/>
+                <img src="https://pranixa.com/public/app/4246/Main Banner/banner kids.jpg" />
               </div>
             </li>
             <li class="glide__slide">
               <div class="hero__center">
-                <img src="https://pranixa.com/public/app/4246/banner/banner2.jpg"/>
+                <img src="https://pranixa.com/public/app/4246/banner/banner2.jpg" />
               </div>
             </li>
             <li class="glide__slide">
               <div class="hero__center">
-                <img src="https://pranixa.com/public/app/4246/Main Banner/indian-ethic.jpg"/>
+                <img src="https://pranixa.com/public/app/4246/Main Banner/indian-ethic.jpg" />
               </div>
             </li>
           </ul>
@@ -141,9 +147,10 @@
       <!-- Collection -->
       <section id="collection" class="section collection">
         <div class="collection__container" data-aos="fade-up" data-aos-duration="1200">
-          <div class="collection__box">
+          <div class="collection__box shadow p-3 mb-5 bg-body rounded">
             <div class="img__container">
-              <img class="collection_02" src="https://pranixa.com/public/app/4246/Main Banner/patola-saree (1).jpg" alt="">
+              <img class="collection_02" src="https://pranixa.com/public/app/4246/Main Banner/patola-saree (1).jpg"
+                alt="">
             </div>
             <div class="collection__content">
               <div class="collection__data">
@@ -153,9 +160,10 @@
               </div>
             </div>
           </div>
-          <div class="collection__box">
+          <div class="collection__box shadow p-3 mb-5 bg-body rounded">
             <div class="img__container">
-              <img class="collection_01" src="https://pranixa.com/public/app/4246/Main Banner/tradition-wear-banner-542x407.jpg" alt="">
+              <img class="collection_01"
+                src="https://pranixa.com/public/app/4246/Main Banner/tradition-wear-banner-542x407.jpg" alt="">
             </div>
             <div class="collection__content">
               <div class="collection__data">
@@ -180,9 +188,10 @@
             <div class="glide__track" data-glide-el="track">
               <ul class="glide__slides latest-center">
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
-                      <img src="https://pranixa.com/public/app/4246/Main Banner/traditional-gujarati-saree.jpg" alt="product">
+                      <img src="https://pranixa.com/public/app/4246/Main Banner/traditional-gujarati-saree.jpg"
+                        alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Traditional Sarees</h3>
@@ -234,8 +243,8 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
-                    <div class="product__header">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
+                    <div class="product__header ">
                       <img src="https://pranixa.com/public/app/4246/Main Banner/bandhej-sarees.jpg" alt="product">
                     </div>
                     <div class="product__footer">
@@ -288,7 +297,7 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
                       <img src="https://pranixa.com/public/app/4246/Main Banner/paithani-saree.jpg" alt="product">
                     </div>
@@ -342,7 +351,7 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
                       <img src="https://pranixa.com/public/app/4246/Main Banner/so-cispy-crip.jpg" alt="product">
                     </div>
@@ -396,7 +405,7 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
                       <img src="https://pranixa.com/public/app/4246/Product/Daily wear/h2.jpg?width=300" alt="product">
                     </div>
@@ -450,9 +459,10 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
-                      <img src="https://pranixa.com/public/app/4246/Product/Daily wear/bl01.jpg?width=300" alt="product">
+                      <img src="https://pranixa.com/public/app/4246/Product/Daily wear/bl01.jpg?width=300"
+                        alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Women Kurti (Multicolor)</h3>
@@ -504,7 +514,7 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
                       <img src="https://pranixa.com/public/app/4246/banner/images (5).jpg" alt="product">
                     </div>
@@ -558,7 +568,7 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
                       <img src="https://pranixa.com/public/app/4246/banner/CFE0664_4-650x650.jpg" alt="product">
                     </div>
@@ -612,9 +622,10 @@
                   </div>
                 </li>
                 <li class="glide__slide">
-                  <div class="product">
+                  <div class="product shadow p-3 mb-5 bg-body rounded">
                     <div class="product__header">
-                      <img src="https://pranixa.com/public/app/4246/banner/e207a308f544828c97bd4041690e291a.jpg" alt="product">
+                      <img src="https://pranixa.com/public/app/4246/banner/e207a308f544828c97bd4041690e291a.jpg"
+                        alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Earing</h3>
@@ -693,7 +704,6 @@
                 <h1 class="primary__title">All Products</h1>
               </div>
             </div>
-            //tranding products
             <div class="section__titles">
               <div class="section__title filter-btn" data-id="Trending Products">
                 <span class="dot"></span>
@@ -733,7 +743,7 @@
                 <use xlink:href="./images/sprite.svg#icon-airplane"></use>
               </svg>
             </div>
-            <p>FREE SHIPPING WORLD WIDE</p>
+            <p style="color:white">FREE SHIPPING WORLD WIDE</p>
           </div>
 
           <div class="facility__box">
@@ -742,7 +752,7 @@
                 <use xlink:href="./images/sprite.svg#icon-credit-card-alt"></use>
               </svg>
             </div>
-            <p>100% MONEY BACK GUARANTEE</p>
+            <p style="color:white">100% MONEY BACK GUARANTEE</p>
           </div>
 
           <div class="facility__box">
@@ -751,7 +761,7 @@
                 <use xlink:href="./images/sprite.svg#icon-credit-card"></use>
               </svg>
             </div>
-            <p>MANY PAYMENT GATWAYS</p>
+            <p style="color:white">MANY PAYMENT GATWAYS</p>
           </div>
 
           <div class="facility__box">
@@ -760,7 +770,7 @@
                 <use xlink:href="./images/sprite.svg#icon-headphones"></use>
               </svg>
             </div>
-            <p>24/7 ONLINE SUPPORT</p>
+            <p style="color:white">24/7 ONLINE SUPPORT</p>
           </div>
         </div>
       </div>
@@ -1084,15 +1094,18 @@
 
 
   <!-- Glide Carousel Script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
   <!-- Animate On Scroll -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
   <!-- Custom JavaScript -->
   <script src="./js/products.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/slider.js"></script>
-
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"></script>
 </body>
 
 </html>
