--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
         <div class="facility__contianer" data-aos="fade-up" data-aos-duration="1200">
           <div class="facility__box">
             <div class="facility-img__container">
-              <svg>
+              <svg style="padding-bottom: 12px">
                 <use xlink:href="./images/sprite.svg#icon-airplane"></use>
               </svg>
             </div>
@@ -748,7 +748,7 @@
 
           <div class="facility__box">
             <div class="facility-img__container">
-              <svg>
+              <svg style="padding-bottom: 12px">
                 <use xlink:href="./images/sprite.svg#icon-credit-card-alt"></use>
               </svg>
             </div>
@@ -757,7 +757,7 @@
 
           <div class="facility__box">
             <div class="facility-img__container">
-              <svg>
+              <svg style="padding-bottom: 12px">
                 <use xlink:href="./images/sprite.svg#icon-credit-card"></use>
               </svg>
             </div>
@@ -766,7 +766,7 @@
 
           <div class="facility__box">
             <div class="facility-img__container">
-              <svg>
+              <svg style="padding-bottom: 12px">
                 <use xlink:href="./images/sprite.svg#icon-headphones"></use>
               </svg>
             </div>
