button and header color are changed

--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
                         alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Traditional Sarees</h3>
                       <div class="rating">
                         <svg>
@@ -215,7 +220,6 @@
                       <div class="product__price">
                         <h4>$750</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -248,6 +252,11 @@
                       <img src="https://pranixa.com/public/app/4246/Main Banner/bandhej-sarees.jpg" alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Bandhej Sarees</h3>
                       <div class="rating">
                         <svg>
@@ -269,7 +278,6 @@
                       <div class="product__price">
                         <h4>$900</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -302,6 +310,11 @@
                       <img src="https://pranixa.com/public/app/4246/Main Banner/paithani-saree.jpg" alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Pathani Sarees</h3>
                       <div class="rating">
                         <svg>
@@ -323,7 +336,6 @@
                       <div class="product__price">
                         <h4>$600</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -356,6 +368,11 @@
                       <img src="https://pranixa.com/public/app/4246/Main Banner/so-cispy-crip.jpg" alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Crepe</h3>
                       <div class="rating">
                         <svg>
@@ -377,7 +394,6 @@
                       <div class="product__price">
                         <h4>$850</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -410,6 +426,11 @@
                       <img src="https://pranixa.com/public/app/4246/Product/Daily wear/h2.jpg?width=300" alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Women Kurti</h3>
                       <div class="rating">
                         <svg>
@@ -431,7 +452,6 @@
                       <div class="product__price">
                         <h4>$450</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -465,7 +485,12 @@
                         alt="product">
                     </div>
                     <div class="product__footer">
-                      <h3>Women Kurti (Multicolor)</h3>
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
+                      <h3>Women Kurti</h3>
                       <div class="rating">
                         <svg>
                           <use xlink:href="./images/sprite.svg#icon-star-full"></use>
@@ -486,7 +511,6 @@
                       <div class="product__price">
                         <h4>$300</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -519,6 +543,11 @@
                       <img src="https://pranixa.com/public/app/4246/banner/images (5).jpg" alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Earing</h3>
                       <div class="rating">
                         <svg>
@@ -540,7 +569,6 @@
                       <div class="product__price">
                         <h4>$300</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -573,6 +601,11 @@
                       <img src="https://pranixa.com/public/app/4246/banner/CFE0664_4-650x650.jpg" alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Earing</h3>
                       <div class="rating">
                         <svg>
@@ -594,7 +627,6 @@
                       <div class="product__price">
                         <h4>$250</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -628,6 +660,11 @@
                         alt="product">
                     </div>
                     <div class="product__footer">
+                      <a href="#">
+                        <button type="submit" class="product__btn">
+                          <i class="fas fa-shopping-cart"></i>
+                        </button>
+                      </a>
                       <h3>Earing</h3>
                       <div class="rating">
                         <svg>
@@ -649,7 +686,6 @@
                       <div class="product__price">
                         <h4>$550</h4>
                       </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                     <ul>
                       <li>
@@ -874,7 +910,7 @@
           <div class="section__titles">
             <div class="section__title active">
               <span class="dot"></span>
-              <h1 class="primary__title">Phone News</h1>
+              <h1 class="primary__title">Pranixa News</h1>
             </div>
           </div>
         </div>
